# GoldenExperience

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/cached_kv/: README.md  bidirectional_mixed_refinement_summary_20260713.json  bidirectional_pipeline_smoke_20260710.json  bidirectional_validation_sweep_20260710.json  cka_layer_alignment_ab_20260710.json  expanded_corpus_nonlinear_ab_20260710.json  logit_refinement_ab_8b_to_14b_20260713.json  logit_refinement_paired_confirmation_8b_to_14b_20260713.json  logit_refinement_parameter_screen_8b_to_14b_20260713.json  mixed_refinement_14b_to_8b_20260713.json  mixed_refinement_8b_to_14b_20260713.json  mixed_refinement_failure_diagnostic_20260715.json  native_generation_refinement_8b_to_14b_20260713.json  native_generation_steps_ab_8b_to_14b_20260713.json  qwen3_8b_to_14b_cost_1776.json  qwen3_8b_to_14b_native_prefill_1776.json  regularization_capacity_sweep_20260710.json  runtime_cost_8b_to_14b_20260713.json  runtime_cost_storage_cleanup_20260715.json  scaled_baseline_ab_20260710.json  validation_candidate_14b_to_8b_20260713.json  validation_candidate_8b_to_14b_20260713.json
artifacts/cross_model_runtime/: README.md
artifacts/hidden_bridge/: qwen3_hidden_bridge_full.json  qwen3_hidden_bridge_prefix_sweep.json  qwen3_hidden_bridge_qwen3_8b_to_14b.json  qwen3_hidden_bridge_qwen3_8b_to_14b_multisource_w3_rank512_prefix32.json  qwen3_hidden_bridge_qwen3_8b_to_14b_multisource_w5_rank512_prefix32.json  qwen3_hidden_bridge_qwen3_8b_to_14b_prefix32.json  qwen3_hidden_bridge_qwen3_8b_to_14b_prefix_specific_rank1024.json  qwen3_hidden_bridge_qwen3_8b_to_14b_rank1024_prefix32.json  qwen3_hidden_bridge_qwen3_8b_to_14b_rank512_prefix32.json  qwen3_hidden_bridge_qwen3_8b_to_14b_rank512_value10_prefix32.json  qwen3_hidden_bridge_rank128.json  qwen3_hidden_bridge_rank_sweep.json  qwen3_hidden_bridge_rich_calibration_sweep.json  qwen3_hidden_bridge_smoke.json  qwen3_hidden_bridge_value_aware.json
artifacts/kv_baseline/: README.md
artifacts/publication_v5/: README.md  initialization.json  initialization_v4.json
configs/: cross_model_reuse.yaml  kv_baseline_mooncake.env.example  kv_baseline_prompts.json  lmcache.example.yaml  publication_sources.qwen3-v5.json  qwen3_cached_kv_prompts.json  synthetic_experiment.yaml
docs/: artifact.md  design.md  experiment_matrix.md  paper_outline.md  patch_manifest.md  publication_dataset.md  related_work_matrix.md  selective_kv_v5.md  shared_kv_substrate.md  transport_v3.md  transport_v4.md  v5_pipeline.md
examples/: basic_usage.py  cross_model_reuse_plan.py  layerwise_offload.py  policy_tiering.py
goldenexperience/: __init__.py  model_config.py  py.typed
goldenexperience/benchmarks/: __init__.py  _python_eval_worker.py  cached_kv_cost.py  harness.py  metrics.py  publication.py  publication_builder.py  publication_eval.py  publication_sources.py  scenarios.py  selective_runtime.py  synthetic.py
goldenexperience/cache_core/: __init__.py  block.py  enums.py  index.py
goldenexperience/cli/: __init__.py  kv_baseline.py  patch_manifest.py  publication_benchmark.py  size_variant.py  v5_pipeline.py  v5_smoke.py
goldenexperience/cross_model_mapper/: __init__.py  mapper.py  quality_gate.py  reuse_policy.py
goldenexperience/engine_adapter/: __init__.py  base.py  mock.py  signature.py  transformers_adapter.py  vllm_adapter.py
goldenexperience/lmcache_patch/: __init__.py  keying.py  manifest.py
goldenexperience/reuse/: __init__.py  models.py  planner.py
goldenexperience/runtime/: __init__.py  config.py  cross_model_materializer.py  cross_model_reuse.py  direct_paged_kv.py  lmcache_mp_server.py  lmcache_retrieve_transform.py  materializer_client.py  mooncake_objects.py  runtime_audit_telemetry.py  vllm_retrieve_transform_connector.py
goldenexperience/sglang_runtime/: __init__.py  config.py
goldenexperience/size_variant/: __init__.py  attention_collection.py  cached_kv_bridge.py  cached_kv_dataset.py  cached_kv_manifest.py  cached_kv_training.py  calibration.py  head_aware_transport.py  layer_mapping.py  models.py  projection.py  real_model_smoke.py  risk_gate.py  selective_manifest.py  v5_calibration.py  v5_collect.py  v5_directional_fit.py  v5_fit.py  v5_generation.py  v5_method_dev.py  v5_pipeline.py  v5_real_risk.py  (+7 more)
paper/: README.md  paper.md  references.bib
recipes/: README.md  kv_baseline_mooncake_local.env
scripts/: benchmark_qwen3_cached_kv_cost.py  benchmark_qwen3_native_prefill.py  bootstrap_runtime.sh  experiment_qwen3_hidden_bridge.py  generate_qwen3_cached_kv_dataset.py  install_runtime.sh  patch_lmcache_mooncake_runtime.py  run_cross_model_hidden_bridge_runtime.py  run_cross_model_runtime.py  run_qwen3_cached_kv_runtime.py  run_synthetic_benchmark.ps1  smoke_cross_model_plan.py  start_sglang_lmcache.sh  train_qwen3_cached_kv_bridge.py  train_qwen3_multisource_hidden_bridge.py  train_qwen3_prefix_specific_bridge.py
tests/: test_benchmark_foundations.py  test_cache_core.py  test_cached_kv_bridge.py  test_cached_kv_materializer.py  test_cached_kv_training.py  test_cross_model_reuse_runtime.py  test_install_runtime.py  test_kv_baseline_mooncake.py  test_kv_baseline_summary.py  test_kv_seed_manifest.py  test_lmcache_mp_server.py  test_lmcache_retrieve_transform.py  test_mapper.py  test_materializer_client.py  test_model_config.py  test_mooncake_runtime_patch.py  test_patch_manifest.py  test_publication_benchmark_cli.py  test_publication_builder.py  test_publication_eval.py  test_real_model_smoke.py  test_related_work_audit.py  test_release_canonicalizer.py  test_reuse_planner.py  test_runtime_audit_telemetry.py  test_selective_kv_v5.py  test_size_variant.py  test_tiered_store.py  test_train_qwen3_cached_kv_bridge.py  test_v5_calibration.py  test_v5_collect.py  test_v5_directional_fit.py  test_v5_fit.py  test_v5_generation.py  test_v5_method_dev.py  test_v5_pipeline.py  test_v5_real_runtime.py  test_v5_risk.py  test_v5_runtime.py  test_v5_sealed.py  (+3 more)
(+93 files in other folders)
