[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenexperience"
version = "0.1.0"
description = "Cross-model KV cache reuse patch framework for vLLM, SGLang legacy, and LMCache."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "GoldenExperience Contributors" }
]
keywords = [
  "llm",
  "kv-cache",
  "cross-model-reuse",
  "lmcache",
  "vllm",
  "sglang",
  "serving",
  "systems",
  "mlsys",
  "osdi"
]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1"]
legacy-hf = ["transformers>=4.40", "torch>=2.1"]
runtime-vllm = ["vllm", "lmcache"]
legacy-sglang = ["sglang"]
legacy-vllm = ["vllm>=0.5"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
golden-patch-manifest = "goldenexperience.cli.patch_manifest:main"
golden-scale = "goldenexperience.cli.size_variant:main"
golden-scale-collect = "goldenexperience.cli.size_variant:main_collect"
golden-scale-fit = "goldenexperience.cli.size_variant:main_fit"
golden-scale-validate = "goldenexperience.cli.size_variant:main_validate"
golden-scale-bench = "goldenexperience.cli.size_variant:main_bench"
golden-synthetic-benchmark = "goldenexperience.benchmarks.synthetic:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["goldenexperience*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
