[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenexperience"
version = "0.1.0"
description = "Cross-model KV cache reuse framework for vLLM, LMCache MP, and Mooncake Store."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "GoldenExperience Contributors" }
]
keywords = [
  "llm",
  "kv-cache",
  "cross-model-reuse",
  "lmcache",
  "vllm",
  "mooncake",
  "serving",
  "systems",
  "mlsys",
  "osdi"
]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1", "safetensors>=0.4,<1"]
hf = ["transformers>=4.40", "torch>=2.1", "safetensors>=0.4,<1"]
runtime = ["vllm==0.24.0", "lmcache==0.4.6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
golden-patch-manifest = "goldenexperience.cli.patch_manifest:main"
golden-scale = "goldenexperience.cli.size_variant:main"
golden-scale-collect = "goldenexperience.cli.size_variant:main_collect"
golden-scale-fit = "goldenexperience.cli.size_variant:main_fit"
golden-scale-validate = "goldenexperience.cli.size_variant:main_validate"
golden-scale-bench = "goldenexperience.cli.size_variant:main_bench"
golden-synthetic-benchmark = "goldenexperience.benchmarks.synthetic:main"
golden-kv-baseline = "goldenexperience.cli.kv_baseline:main"
golden-publication-benchmark = "goldenexperience.cli.publication_benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["goldenexperience*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
