[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenexperience"
version = "0.1.0"
description = "Cross-model KV cache reuse framework for vLLM, LMCache MP, and Mooncake Store."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "GoldenExperience Contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
keywords = [
  "llm",
  "kv-cache",
  "cross-model-reuse",
  "lmcache",
  "vllm",
  "mooncake",
  "serving",
  "systems",
  "mlsys",
  "osdi"
]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1", "safetensors>=0.4,<1"]
hf = [
  "accelerate>=1,<2",
  "transformers>=5,<6",
  "torch>=2.1",
  "safetensors>=0.4,<1",
]
runtime = ["vllm==0.24.0", "lmcache==0.4.6"]
dev = [
  "build>=1,<2",
  "coverage[toml]>=7,<8",
  "mypy>=1.10,<3",
  "pytest>=8,<10",
  "ruff>=0.5,<1",
  "safetensors>=0.4,<1",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/XuTianle0101/GoldenExperience"
Issues = "https://github.com/XuTianle0101/GoldenExperience/issues"
Repository = "https://github.com/XuTianle0101/GoldenExperience.git"

[project.scripts]
golden-patch-manifest = "goldenexperience.cli.patch_manifest:main"
golden-scale = "goldenexperience.cli.size_variant:main"
golden-scale-collect = "goldenexperience.cli.size_variant:main_collect"
golden-scale-fit = "goldenexperience.cli.size_variant:main_fit"
golden-scale-validate = "goldenexperience.cli.size_variant:main_validate"
golden-scale-bench = "goldenexperience.cli.size_variant:main_bench"
golden-synthetic-benchmark = "goldenexperience.benchmarks.synthetic:main"
golden-kv-baseline = "goldenexperience.cli.kv_baseline:main"
golden-publication-benchmark = "goldenexperience.cli.publication_benchmark:main"
golden-v5-smoke = "goldenexperience.cli.v5_smoke:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["goldenexperience*"]

[tool.setuptools.package-data]
goldenexperience = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["goldenexperience"]

[tool.coverage.report]
fail_under = 68
precision = 1
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
